--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,13 @@ readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
     "black>=25.12.0",
+    "duckdb>=1.4.2",
     "httpx>=0.28.1",
 ]
+
+[build-system]
+requires = ["hatchling"] 
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["extract", "load"]
