--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
     "black>=25.12.0",
+    "dlt[duckdb]>=1.20.0",
     "duckdb>=1.4.2",
     "httpx>=0.28.1",
 ]
